--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,6 +1,7 @@
 @import url("https://fonts.googleapis.com/css2?family=Palanquin+Dark&family=Shippori+Mincho&display=swap");
 
 @import "variables";
+@import "reset";
 
 @tailwind base;
 @tailwind components;
