--- a/src/_reset.scss
+++ b/src/_reset.scss
@@ -2,3 +2,15 @@
     position: relative;
     top: -1px;
 }
+
+.wizard-card-footer {
+    display: flex;
+    justify-content: center;
+    margin-top: 15px;
+}
+
+.react-form-wizard .wizard-tab-content {
+    text-align: left;
+    padding-left: 0;
+    padding-right: 0;
+}
