--- a/src/styles.scss
+++ b/src/styles.scss
@@ -151,6 +151,87 @@ ol {
     background: #fff;
 }
 
+// TIMELINE
+.timeline {
+    position: relative;
+    z-index: 1;
+
+    li {
+        list-style: none;
+        float: left;
+        width: calc(100% / 3);
+        position: relative;
+        text-align: center;
+        font-size: 14px;
+        margin-bottom: 30px;
+
+        &::before {
+            content: "";
+            width: 30px;
+            height: 30px;
+            border: 2px solid $mainColor;
+            border-radius: 50%;
+            display: block;
+            text-align: center;
+            margin: 0 auto 10px auto;
+            background: #fff;
+            transition: all ease-in-out 0.3s;
+            cursor: pointer;
+        }
+
+        &::after {
+            content: "";
+            position: absolute;
+            width: 100%;
+            height: 2px;
+            background-color: #ccc;
+            top: 15px;
+            left: -50%;
+            z-index: -999;
+            transition: all ease-in-out 0.3s;
+        }
+
+        &:first-child::after {
+            content: none;
+        }
+
+        &.active-tl {
+            color: #666;
+
+            &::before {
+                background: $mainColor;
+            }
+        }
+
+        &.active-tl + li::after {
+            background: $mainColor;
+        }
+
+        &.delivered-tl {
+            color: #b3b3b3;
+
+            &::before {
+                background: #b3b3b3;
+                border-color: #b3b3b3;
+            }
+        }
+
+        &.not-delivered-tl {
+            color: $titleColor;
+
+            &::before {
+                content: "X";
+                color: #fff;
+                font-size: 20px;
+                font-weight: bold;
+                line-height: 25px;
+                background: $titleColor;
+                border-color: $titleColor;
+            }
+        }
+    }
+}
+
 footer {
     position: relative;
 
@@ -187,7 +268,7 @@ footer {
 }
 
 address {
-    font-size: 16px;
+    font-size: 14px;
     font-style: normal;
     line-height: 120%;
     margin-top: 20px;
