--- a/src/_reset.scss
+++ b/src/_reset.scss
@@ -110,3 +110,7 @@
     font-weight: normal;
     color: $secondaryColor;
 }
+
+.react-form-wizard.xs .wizard-icon-circle {
+    cursor: pointer;
+}
