--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,4 +1,5 @@
 @import url("https://fonts.googleapis.com/css2?family=Palanquin+Dark&family=Shippori+Mincho&display=swap");
+@import url("https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/solid.min.css");
 
 @import "variables";
 @import "reset";
@@ -185,19 +186,22 @@ ol {
         text-align: center;
         font-size: 14px;
         margin-bottom: 30px;
+        color: #666;
 
         &::before {
+            font-family: "Font Awesome 6 Free";
             content: "";
-            width: 30px;
-            height: 30px;
+            width: 40px;
+            height: 40px;
             border: 2px solid $mainColor;
             border-radius: 50%;
             display: block;
+            font-size: 25px;
             text-align: center;
+            line-height: 38px;
             margin: 0 auto 10px auto;
             background: #fff;
             transition: all ease-in-out 0.3s;
-            cursor: pointer;
         }
 
         &::after {
@@ -206,7 +210,7 @@ ol {
             width: 100%;
             height: 2px;
             background-color: #ccc;
-            top: 15px;
+            top: 20px;
             left: -50%;
             z-index: -999;
             transition: all ease-in-out 0.3s;
@@ -216,24 +220,25 @@ ol {
             content: none;
         }
 
-        &.active-tl {
-            color: #666;
-
+        &.to-send-tl {
             &::before {
-                background: $mainColor;
+                content: "\f466";
+                font-size: 18px;
             }
         }
 
-        &.active-tl + li::after {
-            background: $mainColor;
+        &.in-transit-tl {
+            &::before {
+                content: "\f48b";
+                font-size: 18px;
+                color: $mainColor;
+            }
         }
 
         &.delivered-tl {
-            color: #b3b3b3;
-
             &::before {
-                background: #b3b3b3;
-                border-color: #b3b3b3;
+                content: "\f00c";
+                color: $mainColor;
             }
         }
 
@@ -241,14 +246,33 @@ ol {
             color: $titleColor;
 
             &::before {
-                content: "X";
+                content: "\f00d";
                 color: #fff;
-                font-size: 20px;
-                font-weight: bold;
-                line-height: 25px;
                 background: $titleColor;
                 border-color: $titleColor;
             }
+        }
+
+        &.active-tl {
+            color: $mainColor;
+
+            &::before {
+                color: #fff;
+                background: $mainColor;
+            }
+
+            &.delivered-tl {
+                color: #b3b3b3;
+
+                &::before {
+                    background: #b3b3b3;
+                    border-color: #b3b3b3;
+                }
+            }
+        }
+
+        &.active-tl + li::after {
+            background: $mainColor;
         }
     }
 }
