--- a/client/src/styles.scss
+++ b/client/src/styles.scss
@@ -3,6 +3,7 @@
 
 @import "variables";
 @import "reset";
+@import "loader-svg";
 
 @tailwind base;
 @tailwind components;
@@ -12,6 +13,7 @@ body {
     font-family: "Palanquin Dark", serif;
     background: $bodyColor;
     color: $generalText;
+    overflow-x: hidden;
 }
 
 header {
@@ -37,7 +39,7 @@ nav a {
     border-bottom: 2px solid #fff;
 }
 
-ol {
+#shipping-process ol {
     counter-reset: li;
     padding-left: 45px;
 
@@ -48,7 +50,6 @@ ol {
         margin-bottom: 30px;
         display: flex;
         align-items: center;
-        line-height: 110%;
 
         &::before {
             content: counter(li) ".";
@@ -59,6 +60,25 @@ ol {
 
         &:last-child {
             margin-bottom: 0;
+        }
+    }
+}
+
+#terms-conditions {
+    counter-reset: li;
+    padding-left: 32px;
+
+    li {
+        counter-increment: li;
+        position: relative;
+
+        &::before {
+            content: counter(li) ".";
+            font-size: 18px;
+            position: absolute;
+            top: -2px;
+            left: -32px;
+            color: $secondaryColor;
         }
     }
 }
@@ -78,11 +98,84 @@ ol {
     top: -100%;
 }
 
+#services {
+    &::before {
+        content: "";
+        background-image: linear-gradient(
+            to left bottom,
+            $mainColor 0%,
+            $mainColor calc(50% - 1px),
+            transparent 50%
+        );
+        position: absolute;
+        height: 40px;
+        top: -60px;
+        right: 0;
+    }
+
+    ul li:nth-child(odd)::before {
+        content: "";
+        background-image: linear-gradient(
+            to right top,
+            $mainColor 0%,
+            $mainColor calc(50% - 1px),
+            transparent 50%
+        );
+        position: absolute;
+        width: 100%;
+        height: 50px;
+        top: -50px;
+    }
+
+    ul::after {
+        content: "";
+        background-image: linear-gradient(
+            to right top,
+            $mainColor 0%,
+            $mainColor calc(50% - 1px),
+            transparent 50%
+        );
+        position: absolute;
+        width: 90%;
+        height: 40px;
+        bottom: -60px;
+        left: 0;
+    }
+
+    ul li:nth-child(even)::before {
+        content: "";
+        background-image: linear-gradient(
+            to left top,
+            $secondaryColor 0%,
+            $secondaryColor calc(50% - 1px),
+            transparent 50%
+        );
+        position: absolute;
+        width: 100%;
+        height: 50px;
+        top: -50px;
+    }
+
+    ul li:last-child:nth-child(even)::after {
+        content: "";
+        background-image: linear-gradient(
+            to left bottom,
+            $secondaryColor 0%,
+            $secondaryColor calc(50% - 1px),
+            transparent 50%
+        );
+        position: absolute;
+        width: 100%;
+        height: 50px;
+        bottom: -50px;
+    }
+}
+
 .triangle {
     background-image: linear-gradient(
         to left top,
         $mainColor 0%,
-        $mainColor 50%,
+        $mainColor calc(50% - 1px),
         transparent 50%
     );
     position: absolute;
@@ -96,7 +189,7 @@ ol {
         background-image: linear-gradient(
             to left top,
             $secondaryColor 0%,
-            $secondaryColor 50%,
+            $secondaryColor calc(50% - 1px),
             transparent 50%
         );
         position: absolute;
@@ -112,7 +205,7 @@ ol {
     background-image: linear-gradient(
         to left top,
         $secondaryColor 0%,
-        $secondaryColor 50%,
+        $secondaryColor calc(50% - 1px),
         transparent 50%
     );
     position: absolute;
@@ -127,7 +220,7 @@ ol {
     background-image: linear-gradient(
         to left top,
         $secondaryColor 0%,
-        $secondaryColor 50%,
+        $secondaryColor calc(50% - 1px),
         transparent 50%
     );
     position: absolute;
@@ -147,21 +240,25 @@ ol {
 }
 
 .santiago-map {
+    background: $mainColor;
+    position: absolute;
+    top: 80px;
+    width: 100%;
+
     &::before {
         content: "";
         background-image: linear-gradient(
-            to right top,
+            to left top,
             $mainColor 0%,
-            $mainColor 50%,
+            $mainColor calc(50% - 1px),
             transparent 50%
         );
-        width: 85%;
+        width: 100%;
         height: 20px;
         position: absolute;
-        left: 0;
-        top: -35px;
-        z-index: 1;
-        opacity: 0.8;
+        right: 0;
+        top: -20px;
+        z-index: -1;
     }
 
     &::after {
@@ -169,16 +266,42 @@ ol {
         background-image: linear-gradient(
             to left bottom,
             $mainColor 0%,
-            $mainColor 50%,
+            $mainColor calc(50% - 1px),
             transparent 50%
         );
-        width: 95%;
+        width: 100%;
         height: 20px;
         position: absolute;
-        right: 0;
-        bottom: -40px;
+        left: 0;
+        bottom: -20px;
         z-index: -2;
     }
+}
+
+.santiago-triangle-top {
+    background-image: linear-gradient(
+        to left top,
+        $mainColor 0%,
+        $mainColor calc(50% - 1px),
+        transparent 50%
+    );
+    position: absolute;
+    width: 90%;
+    right: -5px;
+    transform: rotate(-3deg);
+}
+
+.santiago-triangle-bottom {
+    background-image: linear-gradient(
+        to right bottom,
+        $mainColor 0%,
+        $mainColor calc(50% - 1px),
+        transparent 50%
+    );
+    position: absolute;
+    width: 50%;
+    left: -5px;
+    transform: rotate(2deg);
 }
 
 .separator {
@@ -291,6 +414,14 @@ ol {
     }
 }
 
+.check-list {
+    li:before {
+        font-family: "Font Awesome 6 Free";
+        content: "\f00c";
+        margin-right: 8px;
+    }
+}
+
 footer {
     position: relative;
 
@@ -299,7 +430,7 @@ footer {
         background-image: linear-gradient(
             to right top,
             $mainColor 0%,
-            $mainColor 50%,
+            $mainColor calc(50% - 1px),
             transparent 50%
         );
         position: absolute;
@@ -315,7 +446,7 @@ footer {
         background-image: linear-gradient(
             to left bottom,
             $secondaryColor 0%,
-            $secondaryColor 50%,
+            $secondaryColor calc(50% - 1px),
             transparent 50%
         );
         position: absolute;
